These should be the majority of my old CDD updates, however there is currently no output. Also, SequenceServer has changed quite a bit since I made these changes, expect breaks. Now to fix, and add in output!

--- a/example.config.yml
+++ b/example.config.yml
@@ -19,6 +19,10 @@
 #
 # database: ~/blast_databases/
 
+# Conserved Domain Database Location
+#
+# cdd_dir: ~/cdd/
+
 # Port to run Sequence Server on.
 #
 # The app will then be accessible at http://your-ip:port. Defaults to 4567.
